Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,8 @@
    "source": [
     "# Create set A\n",
     "A = None\n",
-    "'Type A: {}, A: {}'.format(type(A), A)"
+    "'Type A: {}, A: {}'.format(type(A), A)\n",
+    "\n"
    ]
   },
   {
