Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,8 @@
     "# Create set A\n",
     "A = None\n",
     "'Type A: {}, A: {}'.format(type(A), A)\n",
-    "\n"
+    "\n",
+    "name = 'hussein'\n"
    ]
   },
   {
