Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,8 @@
     "A = None\n",
     "'Type A: {}, A: {}'.format(type(A), A)\n",
     "\n",
-    "name = 'hussein'\n"
+    "name = 'hussein'\n",
+    "print(f'My name')"
    ]
   },
   {
