Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     "'Type A: {}, A: {}'.format(type(A), A)\n",
     "\n",
     "name = 'hussein'\n",
-    "print(f'My name')"
+    "print(f'My name is {nam}')"
    ]
   },
   {
