Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,18 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"Type A: <class 'NoneType'>, A: None\""
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is hussein\n"
+     ]
     }
    ],
    "source": [
@@ -106,7 +103,7 @@
     "'Type A: {}, A: {}'.format(type(A), A)\n",
     "\n",
     "name = 'hussein'\n",
-    "print(f'My name is {nam}')"
+    "print(f'My name is {name}')"
    ]
   },
   {
