Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,10 +100,7 @@
    "source": [
     "# Create set A\n",
     "A = None\n",
-    "'Type A: {}, A: {}'.format(type(A), A)\n",
-    "\n",
-    "name = 'hussein'\n",
-    "print(f'My name is {name}')"
+    "'Type A: {}, A: {}'.format(type(A), A)\n"
    ]
   },
   {
